popover z-index fix - mobile view (#203)

--- a/source/stylesheets/_constants.scss
+++ b/source/stylesheets/_constants.scss
@@ -30,12 +30,12 @@ $zindex-checkbox: 0;
 $zindex-step_description_open: 0;
 $zindex-file_uploader_input: 10;
 $zindex-dragged_element: 20;
+$zindex-popover: 45;
 $zindex-sticky_header: 50;
 $zindex-save_indicator: 62;
 $zindex-workflow_selector: 75;
 $zindex-add_step_sidebar: 80;
 $zindex-add_step-selected_step_clickables: 82;
-$zindex-popover: 90;
 $zindex-popup: 100;
 
 $main-horizontalpadding: 27px;
